[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Agent/AgentGraphics.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.9236, 18.2645 )

[sub_resource type="CircleShape2D" id=2]
radius = 120.0

[node name="Player" type="KinematicBody2D"]
z_index = 3
collision_mask = 0
script = ExtResource( 1 )

[node name="Graphics" type="Node2D" parent="."]
modulate = Color( 0.298039, 0.423529, 1, 1 )
position = Vector2( 0, 35 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )

[node name="LeftFoot" type="ColorRect" parent="Graphics"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -42.1679
margin_top = 11.6952
margin_right = -22.1679
margin_bottom = 31.6952
color = Color( 0.231373, 0.231373, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightFoot" type="ColorRect" parent="Graphics"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.8968
margin_top = 10.1955
margin_right = 37.8968
margin_bottom = 30.1955
color = Color( 0.796078, 0.796078, 0.796078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightHand" type="ColorRect" parent="Graphics"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 38.3738
margin_top = -55.6794
margin_right = 58.3738
margin_bottom = -35.6794
color = Color( 0.796078, 0.796078, 0.796078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftHand" type="ColorRect" parent="Graphics"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -61.4068
margin_top = -55.6794
margin_right = -41.4068
margin_bottom = -35.6794
color = Color( 0.231373, 0.231373, 0.231373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="ColorRect" parent="Graphics"]
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0
margin_top = -68.0
margin_right = 20.0
margin_bottom = -11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="ColorRect" parent="Graphics"]
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.2475
margin_top = -120.742
margin_right = 19.7525
margin_bottom = -80.7424
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftRest" type="Position2D" parent="Graphics"]
position = Vector2( -20, 20 )
scale = Vector2( 1.66667, 1.66667 )

[node name="RightRest" type="Position2D" parent="Graphics"]
position = Vector2( 20, 20 )
scale = Vector2( 1.66667, 1.66667 )

[node name="MiddleRest" type="Position2D" parent="Graphics"]
position = Vector2( 0, 20 )
scale = Vector2( 1.66667, 1.66667 )

[node name="RightShoulder" type="Position2D" parent="Graphics"]
position = Vector2( 20, -68 )
scale = Vector2( 1.66667, 1.66667 )

[node name="LeftShoulder" type="Position2D" parent="Graphics"]
position = Vector2( -20, -68 )
scale = Vector2( 1.66667, 1.66667 )

[node name="HeadRest" type="Position2D" parent="Graphics"]
position = Vector2( -19.6288, -120.712 )
scale = Vector2( 1.66667, 1.66667 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 30 )
z_index = -1
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -24.2741
margin_top = -57.8734
margin_right = 15.7259
margin_bottom = -43.8734
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_DashCooldown_timeout"]
